Chore: fix style & quality errors
Fix checkstyle target: add dependency of test classes
Fix pmd/spotbugs style errorrs, add enumerous string constants